# lms

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  README.rst  cert.crt  cert.key  db.sqlite3  docker-file.yml  newlms  newlms.pub  notes.md  pyproject.toml  requirements.txt  tables.json  tasks.md
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
avatar/: admin.py
avatars/: models.py
chat/: consumers.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_chat_course.py
courses/: admin.py  apps.py  cabinet.py  consumers.py  context_processors.py  fields.py  forms.py  models.py  roles.py  routing.py  signals.py  tables.py  urls.py  views.py
courses/api/: serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_course_image.py  0002_alter_course_intro_video.py  0002_category_coursename_remove_course_subject_and_more.py  0002_coursecategory_alter_subject_options_and_more.py  0002_rename_owner_course_teacher.py  0002_rename_subject_category_alter_category_options_and_more.py  0003_alter_course_image.py  0003_alter_subject_options.py  0003_remove_course_category_remove_course_name_and_more.py  0003_subcategory.py  0003_video_text_image_file_content.py  0004_alter_category_options_remove_category_title_and_more.py  0004_alter_content_options_alter_module_options_and_more.py  0004_alter_module_description.py  0004_coursecategory_slug.py  0005_alter_subcategory_category.py  0005_course_students_alter_course_teacher.py  0005_coursecategory_delete_image.py  0005_rename_subject_category_delete_coursecategory_and_more.py  0006_alter_text_content.py  0006_course_has_practice.py  0006_coursecategory_delete_subcategory.py  0007_alter_text_content.py  0007_course_sub_category.py  0007_rename_title_course_name_remove_course_image_and_more.py  0008_alter_course_course_name.py  0009_subcategory_category_sub_categories_and_more.py  0010_alter_course_course_name.py  0011_rename_course_name_course_category_course_name.py  0012_alter_course_category_note.py  0013_module_pdfs.py  0014_task.py  0015_course_intro_video.py
courses/templatetags/: course.py
crendential/: admin.py  apps.py  forms.py  models.py
crendential/migrations/: 0001_initial.py  0002_alter_crendential_course_alter_crendential_user.py  0002_alter_crendential_user.py  0002_crendential_course.py  0003_crendential_description_crendential_title.py  0003_remove_crendential_name.py
exam/essay/: models.py
exam/multichoice/: models.py
exam/quiz/: __.py  admin.py  crud.py  forms.py  handlers.py  models.py  urls.py  views.py
exam/true_false/: models.py
files/: Bard.html
landing/: adapters.py  admin.py  models.py  urls.py  utils.py  views.py
landing/migrations/: 0001_initial.py  0002_lmsuser_role.py
lms/: forms.py  manage.py
lms/project/: asgi.py  urls.py  views.py
local/: settings.dev.py
st_search/: _MAIN_0.toc
static/: cnewplaylist.css  cnote.css  cstayless.css  cstudentindex.css  cstudentnewmenu.css  cstyles.css  dropdown.css  dropdown.js  footer.css  newdrop.css  newmenu.css  swiper.js
static/assets/: banner.avif
static/css/: base.css
static/js/: swiper.js
students/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
templates/: _base.html  index.html
(+197 files in other folders)
