[tool.poetry]
name = "lms"
version = "0.1.0"
description = "Learning management system"
authors = ["codewiztinsing <tinsingjobs2k@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"
django-filter = "^23.2"
django-split-settings = "^1.2.0"
pyyaml = "^6.0"
django-compressor = "^4.3.1"
django-admin-tools = "^0.9.2"
django-admin-volt = "^1.0.10"
django-crispy-forms = "^2.0"
crispy-tailwind = "^0.5.0"
crispy-bootstrap4 = "^2022.1"
django-braces = "1.15.0"
django-embed-video = "1.4.4"
django-ckeditor = "^6.5.1"


[tool.flake8]
max-line-length = 79
exclude = '''
/(
    .eggs
    build
    dist
    venv
)/
'''

[tool.pre-commit]
repos = [
    "https://github.com/pre-commit/pre-commit-hooks",
    "https://github.com/psf/black",
    "https://github.com/timothycrosley/isort",
]

#<<<<<<< HEAD
#[tool.poetry.group.dev.dependencies]
#flake8 = "^6.0.0"
#pre-commit = "^3.3.1"

#=======
#>>>>>>> 5d54d47 (adding setupfiles)
#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
